fixes: layout problem fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,28 +9,28 @@ body {
   background-color: #921524;
   color: #fff;
   padding: 2rem;
-}
-
-main {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   gap: 4rem;
+  min-height: 100vh;
 }
 
-main header {
+header {
   display: flex;
   flex-direction: column;
   color: #cda0a5;
 }
 
 .music {
-  display: flex;
+  display: grid;
+  grid-template-columns: minmax(24rem, 1fr) 2fr;
   gap: 3rem;
   align-items: end;
 }
 
 .music img {
-  width: 24rem;
+  width: 100%;
   border-radius: 16px;
 }
 
@@ -46,7 +46,6 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 1;
 }
 
 footer .timer {
@@ -91,6 +90,10 @@ footer .controls {
   padding: 1.4rem;
 }
 
+.controls button:nth-child(3):hover {
+  scale: 1.1;
+}
+
 .controls i {
   font-size: 2.5rem;
   color: #e1b9be;
@@ -104,19 +107,18 @@ footer .controls {
   color: #000;
 }
 
-@media screen and (max-width: 768px) {
-  main {
+@media screen and (max-width: 820px) {
+  body {
     gap: 2rem;
   }
 
-  main header {
+  header {
     align-items: center;
     font-size: 0.875rem;
   }
 
   .music {
-    align-items: start;
-    flex-direction: column;
+    grid-template-columns: 1fr;
     gap: 3rem;
   }
 
